# STERO-21Z

./: CMakeLists.txt
lab2_pkg/navigation_pkg/configs/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
lab2_pkg/navigation_pkg/launch/: tiago_hall.launch  tiago_hall_w_map.launch  tiago_move.launch  tiago_room.launch  tiago_room_w_map.launch
launch/: navi_corridor.launch  navi_map.launch  tiago_simple_map.launch  tiago_simple_map_corridor.launch
manipulation/: README.md  komendy.txt  pozycje.txt  task2_run.txt
manipulation/scripts/: create_octomap.py  my_pickup_laydown.py  open_door.py  open_door2.py  pickup_laydown.py  test_jimp.py
mobile/launch/: navi_map.launch
navi_param/: costmap_common_params.yaml  global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml  local_planner_params.yaml
rviz/: simple.rviz
scripts/: correction.py  kinematic.py  kinematic2.py  move.cpp  navi.cpp
